fix: alignment of inputs

--- a/app/ui/components/login/login.module.scss
+++ b/app/ui/components/login/login.module.scss
@@ -88,8 +88,7 @@
       border: 1px $color-brand solid;
 
       @include media-mobile {
-        width: 100% ; 
-        height: 50px;
+        width: 100%; 
        }
     }
 
