--- a/app/ui/components/registration/registration.module.scss
+++ b/app/ui/components/registration/registration.module.scss
@@ -20,10 +20,10 @@
     flex: 1;
     flex-direction: column;
 
-    input, select{
-      width: calc(100% - 25px);
+    input{
+      width: calc(100% - 20px);
     }
-    select{width: calc(100% - 8px);}
+    select{width: 100%;}
 
 
   }
